package Protocol.BattleManager.BM2CM;
message MSG_BM2CM_HEARTBEAT {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

message MSG_BM2CM_REGISTER {
	required int32 GroupId =  1;
	required int32 SubId =  2;
}

